[package]
name = "squic"
version = "0.1.0"
edition = "2024"
description = "Shielded QUIC: silent server, key-pinned identity, runtime client whitelisting"
license = "MIT"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
quinn-proto = "0.11"
socket2 = "0.5"
thiserror = "2"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
bytes = "1"
futures = "0.3"

[[example]]
name = "sqperf"
path = "examples/sqperf.rs"

[[example]]
name = "http3"
path = "examples/http3.rs"
